--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: A sleek, modern Jekyll theme for personal websites.
-description: A sleek, modern Jekyll theme for personal websites. Personal is the perfect theme for developers, designers and other creatives.
-featured_image: /images/graphicstock-hipster-businessman-working-on-digital-virtual-screen-and-business-strategy-as-concept-isolated-on-black-background_r0YFdE2Zb.jpg
+title: Trust the idea, that can lead to the idea!
+description: What are going to do or build today, that prepares us to be where we want or need to be tomorrow?
+featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-homework_B6ra_VpXWG.jpg
 ---
 
 <section class="hero">
