--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-
 
 	<div class="wrap">
 
-		<h1>A sleek, modern Jekyll theme
-		for personal websites</h1>
-		<p>Personal is the perfect theme for developers, designers and other creatives.</p>
+		<h1>Trust the idea, that can lead to the idea!</h1>
+		<p>What are going to do or build today,</p>
+		<p>...that prepares us to be where we want or need to be tomorrow?</p>
 
 		{% include socials.html %}
 
