--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-
 	<div class="wrap">
 
 		<h1>Trust the idea, that can lead to the idea!</h1>
-		<p>What are we going to do or build today...</p>
-		<p>...that prepares us to be where we want or need to be tomorrow?</p>
+		<p>     --Victoria Labalme</p>
+		</p>
+		<h3>What are we going to do or build today...</h3>
+		<h3>...that prepares us to be where we want or need to be tomorrow?</h3>
 
 		{% include socials.html %}
 
