--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-
 		<h1>Trust the idea, that can lead to the idea!</h1>
 		<p style="text-align: right">--Victoria Labalme</p>
 		</p>
-		<h3>What are we going to do or build today...</h3>
-		<h3>...that prepares us to be where we want or need to be tomorrow?</h3>
+		<p>What are we going to do or build today...</p>
+		<p>...that prepares us to be where we want or need to be tomorrow?</p>
 
 		{% include socials.html %}
 
