--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Trust the idea, that can lead to the idea!
+title: Trust the idea that can lead to the idea!
 description: What are going to do or build today that prepares us to be where we want or need to be tomorrow?
 featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-homework_B6ra_VpXWG.jpg
 ---
@@ -13,7 +13,7 @@ featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-
 
 	<div class="wrap">
 
-		<h1>Trust the idea, that can lead to the idea!</h1>
+		<h1>Trust the idea that can lead to the idea!</h1>
 		<p style="text-align: right">--Victoria Labalme</p>
 		<p><b>What are we going to do or build today...</b></p>
 		<p><b>...that prepares us to be where we want or need to be tomorrow?</p>
