--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Trust the idea that can lead to the idea!
-description: What are going to do or build today that prepares us to be where we want or need to be tomorrow?
+description: What are going to do today that prepares us to be where we want to be tomorrow?
 featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-homework_B6ra_VpXWG.jpg
 ---
 
@@ -15,8 +15,8 @@ featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-
 
 		<h1>Trust the idea that can lead to the idea!</h1>
 		<p style="text-align: right">--Victoria Labalme</p>
-		<p><b>What are we going to do or build today...</b></p>
-		<p><b>...that prepares us to be where we want or need to be tomorrow?</p>
+		<p><b>What are we going to do today...</b></p>
+		<p><b>...that prepares us to be where we want to be tomorrow?</p>
 
 		{% include socials.html %}
 
