--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ featured_image: /images/storyblocks-young-man-sitting-at-the-desk-and-doing-his-
 		</article>
 
 		{% endfor %}
+		
+		<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 	</div>
 
